--- a/index.html
+++ b/index.html
@@ -60,6 +60,34 @@
         </div>
     </div>
 
+    <div id="about-modal" class="modal">
+        <div class="modal-content">
+            <h3>About fed</h3>
+            <p><strong>fed</strong> - Bitmap Font Editor</p>
+            <p>A simple, minimalistic font editor for retro computing.</p>
+            <br>
+            <p><strong>Features:</strong></p>
+            <ul>
+                <li>📂 Load bitmap fonts (.fnt, .bin)</li>
+                <li>✏️ Pixel-perfect editing</li>
+                <li>⌨️ Keyboard navigation</li>
+                <li>💾 Save binary fonts</li>
+                <li>📤 Export PNG font sheets</li>
+                <li>🔧 Configurable font dimensions</li>
+            </ul>
+            <br>
+            <p><strong>Keyboard shortcuts:</strong></p>
+            <ul>
+                <li>Arrow keys: Navigate glyphs/pixels</li>
+                <li>Shift+Arrows: Move pixel cursor</li>
+                <li>Space: Toggle pixel</li>
+            </ul>
+            <div class="modal-buttons">
+                <button id="about-close">Close</button>
+            </div>
+        </div>
+    </div>
+
     <input type="file" id="fileinput" accept=".bin,.fnt" style="display:none">
     <script src="fed.js"></script>
 </body>
