add links and update about

--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
     
     <footer>
         <span>&copy; 2025</span>
-        <a href="https://github.com">GitHub</a>
+        <a href="https://iolo.kr">Home</a>
+        <a href="https://github.com/iolo/fed">GitHub</a>
     </footer>
 
     <div id="fontinfo-modal" class="modal">
@@ -79,7 +80,7 @@
             <p><strong>Keyboard shortcuts:</strong></p>
             <ul>
                 <li>Arrow keys: Navigate glyphs/pixels</li>
-                <li>Shift+Arrows: Move pixel cursor</li>
+                <li>Enter/Esc: Start/Finish glyph editing</li>
                 <li>Space: Toggle pixel</li>
             </ul>
             <div class="modal-buttons">
