feature: reversed bits for Apple II HGR fonts

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                 <label>Offset: <input type="number" id="offset" value="0" min="0"></label>
                 <label>Width: <input type="number" id="width" value="8" min="1" max="32"></label>
                 <label>Height: <input type="number" id="height" value="8" min="1" max="32"></label>
+                <label><input type="checkbox" id="reversed-bits"> Reversed Bits</label>
                 <label>Count: <span id="count">0</span></label>
                 <div class="modal-buttons">
                     <button id="fontinfo-ok">OK</button>
