Document glyph insert/delete shortcuts

--- a/index.html
+++ b/index.html
@@ -88,6 +88,8 @@
                     <li>Arrow keys: Navigate glyphs/pixels</li>
                     <li>Enter/Esc: Start/Finish glyph editing</li>
                     <li>Space: Toggle pixel</li>
+                    <li>Insert/I: Insert blank glyph before current</li>
+                    <li>Delete/X: Delete current glyph</li>
                     <li>+/-: Zoom in/out (browser/editor based on mode)</li>
                     <li>Ctrl++/Ctrl+-: Zoom both panels</li>
                     <li>0: Reset zoom to 100% (current panel)</li>
